--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -68,4 +68,5 @@
     <string name="update_tips">I think you can try to block some annoying buttons in God mode. Oh! Yes, it sounds interesting. But this little guy is sometimes as disobedient as the damn stubborn donkey at Tom\'s, don\'t worry guys, I will fix it as soon as possible!</string>
     <string name="crash_tip">Crash detected\n</string>
     <string name="rule_details_field_create_time">create time</string>
+    <string name="top_revert_tip">Move here to cancel</string>
 </resources>
